--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 @media print {
 	body {
@@ -7,21 +7,37 @@
 }
 
 .main-container {
-	font-family: 'Lato';
+	font-family: "Montserrat", sans-serif;
 	width: fit-content;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 .ck-content {
-	font-family: 'Lato';
+	font-family: "Montserrat", sans-serif;
 	line-height: 1.6;
 	word-break: break-word;
 }
 
 .editor-container_classic-editor .editor-container__editor {
 	min-width: 795px;
-	max-width: 795px;
+	max-width: 1000px;
+	position: relative;
+}
+#previewBtn{
+	position: absolute;
+	top: 7px;
+    right: 10px;
+
+}
+
+#previewContent {
+	border: 1px solid #000;
+	padding: 10px;
+	margin-top: 10px;
+	min-height: 200px;
+	height:auto;
+	display: none; /* Ẩn phần preview khi bắt đầu */
 }
 
 .editor-container_include-block-toolbar {
