--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 
 .main-container {
 	font-family: "Montserrat", sans-serif;
-	width: fit-content;
+	width: 100%;
+    max-width: 1000px;
 	margin-left: auto;
 	margin-right: auto;
 }
