--- a/style.css
+++ b/style.css
@@ -39,3 +39,15 @@
 	height:auto;
 	display: none; /* Ẩn phần preview khi bắt đầu */
 }
+
+#installBtn {
+	position: fixed;
+	right: 15px;
+	bottom: 20px;
+	z-index: 10;
+	background: #dbdbdb;
+	padding: 0.5rem;
+	border-radius: 14px;
+	border: none;
+  }
+  
